# template-climate

./: .releaserc  NOTICE.md  README.md  hacs.json  pyproject.toml
custom_components/template_climate/: __init__.py  climate.py  const.py  manifest.json
examples/: configuration.yaml
