[project]
name = "template-climate"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
keywords = [
    "integration",
    "custom-component",
    "climate",
    "template",
    "homeassistant",
    "home-assistant-custom-component",
    "home-assistant-integration",
]
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
description = ""
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"
dependencies = []

[project.urls]
Repository = "https://github.com/eulemitkeule/template-climate"
Documentation = "https://github.com/eulemitkeule/template-climate/blob/master/README.md"
Changelog = "https://github.com/EuleMitKeule/template-climate/releases"
Issues = "https://github.com/eulemitkeule/template-climate/issues"
